--- a/MovieDB/assets/css/main.css
+++ b/MovieDB/assets/css/main.css
@@ -1,6 +1,6 @@
 body{
     font-family: Helvetica, sans-serif;
-    margin: 30px 10%;
+    margin: 20px 10%;
 }
 h1 {
     margin-top: 0px;
@@ -11,7 +11,7 @@ textbox {
     font-size: 10;
 }
 
-/* Class */
+/* Main HTML Class */
 .pagetitle {
     margin-top: 70px;
     margin-bottom: 60px;
