--- a/MovieDB/assets/css/main.css
+++ b/MovieDB/assets/css/main.css
@@ -1,6 +1,6 @@
 body{
     font-family: Helvetica, sans-serif;
-    margin: 20px 10%;
+    margin: 2px 5px;
 }
 h1 {
     margin-top: 0px;
@@ -17,14 +17,17 @@ textbox {
     margin-bottom: 60px;
 }
 
-div.tooltip {	
+div.tooltip {
+    margin: 0 0;
+    opacity: 0.75;
     position: absolute;
-    text-align: left;
-    width: 400px;
-    height: 165px;
-    padding: 2px 2px;
+    padding: 1px 1px;
     border: 0px;
-    border-radius: 0px;
+}
+
+div.bar {
+    margin: 0 0;
+    overflow: hidden;
 }
 
 h1.tooltip {
@@ -34,7 +37,11 @@ h1.tooltip {
 }
 
 p.tooltip {
-    margin-left: 15px;
-    margin-bottom: 1px;
-    margin-top: 2px;
+    margin: 0.3em 0;
+    font-size: 11pt;
+}
+
+div p {
+    /* width: 200px; */
+    word-wrap: break-all;
 }
