--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,23 +1,35 @@
 body{
     font-family: Helvetica, "Source Han Sans CN", STXihei, sans-serif;
-    margin: 30px 10%;
+    font-size: 12pt;
+    margin: 30px 7% 20px 7%;
 }
+
 h1 {
     margin-top: 0px;
     margin-bottom: 45px;
     text-align: center;
 }
+
 h2 {
     margin: 15px inherit;
 }
-img {
-    margin: 0 auto; 
-    display: block;
-}
-figcaption {
+
+p.note {
+    margin-top: 5px;
+    font-size: 11pt;
     font-style: italic;
-    text-align: center;
-    margin-bottom: 10px;
+}
+
+a {
+    font-weight: bold;
+}
+
+div.hline {
+    width: 100%;
+    height: 2px;
+    border-top: 2px solid black;
+    margin-bottom: 0px;
+    clear: both;
 }
 
 /* Class */
