--- a/SHMetro/assets/css/main.css
+++ b/SHMetro/assets/css/main.css
@@ -7,4 +7,12 @@ div.tooltip {
     background-color: wheat;
     font-weight: bold;
     position: absolute;
+    text-align: center;
+    padding: 0px 10px;
+    min-width: 80px;
+}
+
+p.comment {
+    margin: 5px 20px;
+    font-style: italic; 
 }
